Support Relative Path in XML driver. [43417]

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -102,6 +102,7 @@ error.columnMapping.tableMappingXPathNotExist=The table mapping XPath does not e
 error.file.null=All the URLs are empty, it means you haven't select any data source. Are you sure you want to keep it?
 error.columnMapping.sameColumnName=The column name [{0}] already exists. Please use another name.
 error.invalidXpath=The XPath expression "{0}" is invalid.
+error.invalidSource=The xml source file cannot be found.
 
 #data types for column mapping
 datatypes.dateTime=Date Time
@@ -122,6 +123,9 @@ dataset.new=New Data Set
 file.choose=Br&owse...
 schema.choose=Brow&se...
 title.warning=Warning
+FileSelectionButton.menuItem.absolutePath=Absolute Path
+FileSelectionButton.menuItem.relativePath=Relative Path
+SelectRelativeFileDialog.Title=Select a file
 
 datasource.propertyPage.tooltip=XML Data Source
 wizard.autoEncoding=Auto
