--- a/plugins/org.eclipse.datatools.enablement.oda.xml/src/org/eclipse/datatools/enablement/oda/xml/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/src/org/eclipse/datatools/enablement/oda/xml/i18n/messages.properties
@@ -13,6 +13,9 @@
 Connection.PropertiesMissing=Some connection properties are missing.
 Connection.InvalidAppContext=Invalid AppContext.
 Connection.InvalidSource=The xml source file cannot be found or the URL is malformed.
+Connection.NoEncoding=Connection property <Encoding> is missing.
+Connection.ResolveRelativePathError=Could not resolve relative path, because: 
+Connection.InvalidResourceIdentifiers=Invalid resource identifiers: 
 Constants.DriverName=DTP ODA XML Driver
 ResultSet.ResultSetClosed=ResultSet is closed.
 Query.QueryHasNotBeenPrepared=The query has not been prepared yet.
@@ -27,4 +30,5 @@ dateFormatISO8601.inconvertibleValueError=Cannot convert the value of
 exception.invalidArgument=Invalid argument type.
 exception.nullDataSourceContent=Data source content is null.
 ui.invalidXSDFile=The provided xsd file is invalid.
+ui.xsdFileNotFound=Could not found xsd file: 
 
